Fixing Overflow

--- a/style/main.css
+++ b/style/main.css
@@ -39,7 +39,9 @@ body {
   background: var(--colorBg);
   overflow-x: hidden;
 }
-
+.body-wrapper {
+  overflow-x: hidden;
+}
 img {
   width: 100%;
   display: block;
@@ -47,7 +49,6 @@ img {
 
 header {
   background: #fff;
-  overflow-x: hidden;
 }
 
 header nav ul {
@@ -64,7 +65,6 @@ footer {
 
 main {
   width: 100%;
-  overflow-x: hidden;
 }
 h1,
 h2,
@@ -259,9 +259,6 @@ h1 {
 
 /* footer */
 
-footer {
-  overflow-x: hidden;
-}
 .footer-wrapper {
   color: #fff;
   padding: 2rem;
